--- a/Practical8.html
+++ b/Practical8.html
@@ -145,6 +145,9 @@
     .box p{
         text-align: justify;
     }
+    .box a:hover{
+            background-color: blue;
+        }
 
     footer{
             font-size: 20px;
@@ -225,7 +228,7 @@
             <p>HTML stands for Hyper Text Markup Language.It include text and graphics.
                 Using HTML,we can add links to the web pages.It is used to crete web.
             </p>
-            <a style="display:block; width: 90%; background-color: red; text-decoration: none; text-align: center;
+            <a style="display:block; width: 90%; background-color: red;  text-align: center;
              border-radius: 10px; color: white; float: left; padding: 10px;"
             href="Introhtml.html"> Read More</a>
         </div>
