--- a/Practical8.html
+++ b/Practical8.html
@@ -47,7 +47,8 @@
             text-align: center;
         }
         #Banner{
-        background-color: skyblue;
+        margin-top: 20px;
+        background-image: url("image/laptop\ image.jpg");
         height: 600px;
         width: 100%;
         display: flex;
