--- a/Practical8.html
+++ b/Practical8.html
@@ -47,8 +47,8 @@
             text-align: center;
         }
         #Banner{
-        margin-top: 20px;
-        background-image: url("image/laptop\ image.jpg");
+        margin-top: 100px;
+        background-image: url("image/Practical-5\(1\).jpg");
         height: 600px;
         width: 100%;
         display: flex;
