--- a/Practical8.html
+++ b/Practical8.html
@@ -48,7 +48,7 @@
         }
         #Banner{
         margin-top: 100px;
-        background-image: url("image/laptop\ image.jpg");
+        background-image: url("image/1234.jpg");
         height: 600px;
         width: 100%;
         display: flex;
