--- a/Practical8.html
+++ b/Practical8.html
@@ -7,8 +7,8 @@
 </head>
 <style>
     *{
-        padding: 0;
-        margin: 0;
+        padding: 10px;
+        margin: 10px;
     }
      ul{
             margin-top: 0;
@@ -171,7 +171,8 @@
             background-color: violet;
             padding: 20px;
             text-align: center;
-            margin-bottom: 20px;
+            margin-top: 20px;
+            margin-bottom: 15px;
         }
         footer a:hover{
             background-color: beige;
