--- a/Practical8.html
+++ b/Practical8.html
@@ -7,8 +7,8 @@
 </head>
 <style>
     *{
-        padding: 10px;
-        margin: 10px;
+        padding: 0;
+        margin: 0;
     }
      ul{
             margin-top: 0;
