--- a/Practical8.html
+++ b/Practical8.html
@@ -147,6 +147,9 @@
         border-radius: 8px;
         box-shadow: 0 5px 5px rgba(0,0,0,0.15);
     }
+    .box a:hover{
+        background-color: orangered;
+    }
     .box img{
         width:100%;
         border-radius: 8px;
@@ -154,10 +157,7 @@
 
     }
 
-    .box a:hover{
-        background-color: navy;
-
-    }
+    
     .box h4{
         margin: 0px 10px;
         text-align: center;
