--- a/Practical8.html
+++ b/Practical8.html
@@ -53,6 +53,7 @@
         color: white;
         font-size: 40px;
         margin-bottom: 15px;
+        background-repeat: no-repeat;
     }
     #banner h1{
             position: absolute;
