--- a/Practical8.html
+++ b/Practical8.html
@@ -103,6 +103,8 @@
        text-align: justify;
     color: white;
     font-size: 20px;
+    padding: 10px;
+    text-align: justify;
 
     }
     #left-side h3{
