--- a/Practical8.html
+++ b/Practical8.html
@@ -54,6 +54,7 @@
         font-size: 40px;
         margin-bottom: 15px;
         background-repeat: no-repeat;
+        padding: 10px;
     }
     #banner h1{
             position: absolute;
