--- a/Practical8.html
+++ b/Practical8.html
@@ -47,12 +47,12 @@
         }
         #Banner{
         margin-top: 100px;
-        background-image: url("image/30.jpg");
         height: 600px;
         width: 100%;
-        color: white;
-        font-size: 40px;
         margin-bottom: 15px;
+    }
+    #banner img{
+        width: 100%;
     }
     #banner h1{
             position: absolute;
@@ -195,6 +195,7 @@
     </header>
     <div id="Banner">
         <a name="part1"></a>
+        <img src="image/30.jpg">
         <h1><b>PRACTICAL - 8</b></h1>
     </div>
     <div id="box2">
