--- a/Practical8.html
+++ b/Practical8.html
@@ -49,6 +49,8 @@
         margin-top: 100px;
         height: 600px;
         width: 100%;
+        color: white;
+        font-size: 40px;
         margin-bottom: 15px;
     }
     #banner img{
