--- a/Practical8.html
+++ b/Practical8.html
@@ -46,6 +46,7 @@
             clear: both;
         }
         #Banner{
+        background-image: url("image/30.jpg");
         margin-top: 100px;
         height: 600px;
         width: 100%;
@@ -53,9 +54,7 @@
         font-size: 40px;
         margin-bottom: 15px;
     }
-    #banner img{
-        width: 100%;
-    }
+   
     #banner h1{
             position: absolute;
             color: white;
