--- a/Practical8.html
+++ b/Practical8.html
@@ -45,17 +45,19 @@
         h1{
             clear: both;
         }
+        
         #Banner{
         background-image: url("image/30.jpg");
-        margin-top: 100px;
         height: 600px;
         width: 100%;
         color: white;
         font-size: 40px;
+        margin-top: 100px;
         margin-bottom: 15px;
     }
    
     #banner h1{
+            position: absolute;
             color: white;
             left: 20px;
             top: 100px;
