--- a/Practical10.html
+++ b/Practical10.html
@@ -175,7 +175,7 @@
         <i class="fa fa-times"></i>
     </label>
     <div class="content">
-        <img src="../image/com.jpg" alt="top-image">
+        <img src="image/laptop image.jpg" alt="top-image">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis beatae numquam ipsa harum, eligendi praesentium consequuntur asperiores quos pariatur sunt deleniti repudiandae nam dignissimos, explicabo modi hic officia doloribus id nostrum
             dolor dolorem velit omnis? Eius repudiandae quibusdam odio ducimus, nostrum, repellendus porro accusantium necessitatibus laudantium dolorum quo minus enim! Necessitatibus ipsa voluptas deleniti quis optio vero ipsam beatae provident sed!
             Repellat harum doloribus unde perspiciatis ea amet perferendis beatae, quidem assumenda adipisci consectetur totam iste praesentium dolor mollitia delectus modi consequatur voluptatibus. Debitis alias fugiat minima, sit fuga porro ut doloribus
