--- a/Practical10.html
+++ b/Practical10.html
@@ -164,7 +164,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="../image/fullstack_logo1.png" alt="fullstack-logo">
+        <img src="image/logo.png" alt="fullstack-logo">
         <h1>Fullstack</h1>
     </div>
     <input type="checkbox" id="chk">
