--- a/Practical11.html
+++ b/Practical11.html
@@ -107,7 +107,7 @@
             <tr>
                 <td>3</td>
                 <td>Create a Webpage showing a basic html structure using character  <br> entities and span tag</td>
-                <td><a href="Practical3.html">Practical 3</a></td>
+                <td><a href="Practical-3.html">Practical 3</a></td>
                 <td  class="check">Checked</td>
                 <td>
                     <i class="fas fa-pencil-alt pen" title="Edit"></i>
@@ -118,7 +118,7 @@
                 <td>4</td>
                 <td>Create a Webpage having list of all practicals with their individual <br> practical page links
                 </td>
-                <td><a href="Practical4page.html">Practical 4</a></td>
+                <td><a href="practical4.html">Practical 4</a></td>
                 <td class="check">Checked</td>
                 <td>
                     <i class="fas fa-pencil-alt pen" title="Edit"></i>
@@ -128,7 +128,7 @@
             <tr>
                 <td>5</td>
                 <td> Create a Webpage showing the use of Image-Map <br> in Web Application</td>
-                <td><a href="Practical5.html">Practical 5</a></td>
+                <td><a href="practical5.html">Practical 5</a></td>
                 <td  class="check">Checked</td>
                 <td>
                     <i class="fas fa-pencil-alt pen" title="Edit"></i>
@@ -168,7 +168,7 @@
             <tr>
                 <td>9</td>
                 <td>Create a Responsive web Layout with Responsive Navigation Bar</td>
-                <td><a href="Practical9.html">Practical 9</a></td>
+                <td><a href="Practical10.html">Practical 9</a></td>
                 <td class="uncheck">Un-Checked</td>
                 <td>
                     <i class="fas fa-pencil-alt pen" title="Edit"></i>
