--- a/Practical11.html
+++ b/Practical11.html
@@ -16,7 +16,7 @@
             font-family: Arial, Helvetica, sans-serif;
         }
         table{
-            border: 3px solid darkblue ;
+            border: 4px darkred ;
             margin: 2% auto;
             border-collapse: collapse;
         }
@@ -62,7 +62,7 @@
             color: grey;
         }
         .pen:hover, .trash:hover{
-            color: darkblue;
+            color:indianred;
         }
         .trash{
             color: grey;
