--- a/Practical11.html
+++ b/Practical11.html
@@ -16,12 +16,12 @@
             font-family: Arial, Helvetica, sans-serif;
         }
         table{
-            border: 4px darkred ;
+            border: 3px solid black ;
             margin: 2% auto;
             border-collapse: collapse;
         }
         caption{
-            background-color: darkblue;
+            background-color: darkred;
             color: white;
             font-weight: 600;
             padding: 12px 0;
