--- a/Practical11.html
+++ b/Practical11.html
@@ -21,7 +21,7 @@
             border-collapse: collapse;
         }
         caption{
-            background-color: darkred;
+            background-color:chocolate;
             color: white;
             font-weight: 600;
             padding: 12px 0;
