--- a/Practical11.html
+++ b/Practical11.html
@@ -62,7 +62,7 @@
             color: grey;
         }
         .pen:hover, .trash:hover{
-            color:indianred;
+            color:crimson;
         }
         .trash{
             color: grey;
