--- a/Practical12.html
+++ b/Practical12.html
@@ -103,6 +103,10 @@
             font-size: 20px;
             color: rgb(56, 13, 38);
         }
+        img{
+            height: 100px;
+            width: 100px;
+        }
     </style>
 </head>
 <body>
