--- a/Practical17.html
+++ b/Practical17.html
@@ -3,16 +3,147 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="practical17.css">
+    <title>Practical 17</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+<style>
+    *{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: 'Quicksand', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: black;
+    height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-clip: content-box;
+}
+
+#time{
+    font-size: 8rem;
+}
+#greeting{
+    margin-bottom: 1rem;
+}
+h2{
+    font-size: 3rem;
+    opacity: .8;
+}
+#day{
+    font-size: 50px;
+    margin-top: 0%;
+    margin-bottom: 0%;
+}
+
+@media(max-width:320px){
+    #time{
+        font-size: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #greeting{
+        font-size: 35px;
+        display: inline;
+        justify-content: center;
+        align-items: center;
+        margin-top: 5px;
+
+    }
+    #day{
+
+        font-size: 30px;
+    }
+}
+</style>
 </head>
 <body>
     <time id="time"></time><br><br><br>
     <h1 id="greeting"></h1><br><br><br>
     <h2 id="name" contenteditable="true"></h2><br>
     <h3 id="day"></h3>
-    <script src="practical17.js"></script>
+    <script>
+        const time1 = document.getElementById("time");
+const greeting1= document.getElementById("greeting");
+const name1= document.getElementById("name");
+const day1=document.getElementById("day");
+
+
+
+name1.addEventListener("keypress",setName);
+name1.addEventListener("blur",setName);
+
+function showtime(){
+let today= new Date();
+let hour =today.getHours();
+let min=today.getMinutes();
+let sec=today.getSeconds();
+let date=today.toDateString();
+
+const period = hour >=12? 'PM':'AM';
+
+hour=hour%12 || 12;
+
+time1.innerHTML=`${addZero(hour)}<span>:</span>${addZero(min)}<span>:</span>${addZero(sec)} ${period}`;
+
+day1.innerHTML=`${date}`;
+setTimeout(showtime,1000);
+}
+function addZero(n){
+    return(parseInt(n,10)<10?'0':" ")+n;
+}
+
+function setGreeting(){
+    let today=new Date();
+    let hour=today.getHours();
+    if(hour<12){
+        document.body.style.backgroundImage='url("./image/good morning.jpg")';
+        greeting1.innerHTML='Good Morning';
+        document.body.style.color="black";
+    }
+    else if(hour<18){
+        document.body.style.backgroundImage='url("./image/good afternoon.jpg")';
+        greeting1.innerHTML='Good Afternoon';
+        document.body.style.color="Navy";
+    }
+    else{
+        document.body.style.backgroundImage='url("image/good night.jpg")';
+        greeting1.innerHTML='Good Evening';
+        document.body.style.color="white";
+    }
+}
+
+function getName(){
+if(localStorage.getItem("myName1")===null){
+    name1.innerHTML="[Name]";
+}
+else{
+    name1.innerHTML=localStorage.getItem("myName1");
+}
+}
+
+function setName(e){
+    if(e.type==="keypress"){
+        if(e.keyCode == 13){
+        localStorage.setItem("myName1",e.target.innerHTML);
+        name1.blur();
+        }
+    }
+    else{
+        localStorage.setItem("myName1",e.target.innerHTML);
+    }
+}
+
+showtime();
+setGreeting();
+getName();
+    </script>
 </body>
 </html>
